# Flam

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dummy.cpp  native_bridge.cpp
app/src/main/java/com/example/flam/: FlamApplication.kt  MainActivity.kt
app/src/main/java/com/example/flam/camera/: CameraController.kt  FrameExtractor.kt
app/src/main/java/com/example/flam/data/camera/: CameraController.kt  FrameExtractor.kt  GLTextureRenderer.kt
app/src/main/java/com/example/flam/data/nat/: NativeBridge.kt  NativeRepository.kt
app/src/main/java/com/example/flam/data/web/: WebSocketClient.kt
app/src/main/java/com/example/flam/di/: AppModule.kt  CameraModule.kt
app/src/main/java/com/example/flam/gl/: GLTextureRenderer.kt
app/src/main/java/com/example/flam/jni/: NativeBridge.kt
app/src/main/java/com/example/flam/ui/: FlamApp.kt  MainActivity.kt  MainScreen.kt
app/src/main/java/com/example/flam/ui/theme/: Shapes.kt  Theme.kt  Type.kt
app/src/main/java/com/example/flam/ui/viewmodel/: MainViewModel.kt
app/src/main/java/com/example/flam/util/: PermissionUtils.kt
app/src/main/res/values/: colors.xml
app/src/main/res/xml/: network_security_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/server/: package-lock.json  package.json  tsconfig.json
web/server/src/: server.ts
web/web-viewer/: package.json  tsconfig.json
web/web-viewer/src/: viewer.ts
